--- a/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
+++ b/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
@@ -1,1 +1,4 @@
-<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Counter) %>
+<div class="tasks-wrapper">
+	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Counter) %>
+	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Temperature) %>
+</div>
