--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -105,3 +105,19 @@
 .frame-body {
   padding: 4px;
 }
+
+.tasks-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.temperature-wrapper {
+  display: flex;
+  gap: 4px;
+  align-items: baseline;
+}
+
+.temperature-input {
+  width: 80px;
+}
