--- a/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
+++ b/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
@@ -1,4 +1,5 @@
 <div class="tasks-wrapper">
 	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Counter) %>
 	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Temperature) %>
+	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.FlightBooker) %>
 </div>
