--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -198,13 +198,31 @@
  textarea,
  select {
      -webkit-appearance: none;
-     background-color: transparent;
-     border: 0.1rem solid #d1d1d1;
+     border: 0.1rem solid #616161;
      border-radius: 0.4rem;
      box-shadow: none;
      box-sizing: inherit;
      height: 3.8rem;
      padding: 0.6rem 1rem 0.7rem;
+ }
+ input[type="color"]:disabled,
+ input[type="date"]:disabled,
+ input[type="datetime"]:disabled,
+ input[type="datetime-local"]:disabled,
+ input[type="email"]:disabled,
+ input[type="month"]:disabled,
+ input[type="number"]:disabled,
+ input[type="password"]:disabled,
+ input[type="search"]:disabled,
+ input[type="tel"]:disabled,
+ input[type="text"]:disabled,
+ input[type="url"]:disabled,
+ input[type="week"]:disabled,
+ input:not([type]):disabled,
+ textarea:disabled,
+ select:disabled {
+     border: 0.1rem solid #d1d1d1;
+     cursor: not-allowed;
  }
  input[type="color"]:focus,
  input[type="date"]:focus,
