--- a/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
+++ b/lib/seven_gui_tasks_liveview_web/templates/page/index.html.heex
@@ -2,4 +2,5 @@
 	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Counter) %>
 	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Temperature) %>
 	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.FlightBooker) %>
+	<%= live_render(@conn, SevenGuiTasksLiveviewWeb.Tasks.Timer) %>
 </div>
